--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,6 +7,9 @@ contributor:
     deathdate: 1937
     gutenberg_agent_id: '4490'
     url: http://www.gutenberg.org/2009/agents/4490
+covers:
+- cover_type: archival
+  image_path: 66906-h/images/cover.jpg
 creator:
   author:
     agent_name: Lagerlöf, Selma
@@ -23,6 +26,8 @@ creator:
     - https://en.wikipedia.org/wiki/Selma_Lagerlöf
     - https://fi.wikipedia.org/wiki/Selma_Lagerl%C3%B6f
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66906#Marbacka
 gutenberg_issued: '2021-12-09'
 identifiers:
   gutenberg: '66906'
